Correctly style all scrollbars

--- a/src/styles/components/actor-sheets/_aside-base.scss
+++ b/src/styles/components/actor-sheets/_aside-base.scss
@@ -331,9 +331,5 @@ form {
         }
       }
     }
-
-    .sidebar::-webkit-scrollbar-track {
-      box-shadow: none;
-    }
   }
 }
