--- a/src/styles/components/actor-sheets/_aside-character.scss
+++ b/src/styles/components/actor-sheets/_aside-character.scss
@@ -361,10 +361,6 @@ form {
         }
       }
     }
-
-    .sidebar::-webkit-scrollbar-track {
-      box-shadow: none;
-    }
   }
 
   aside.npc {
